@@ -1,5 +1,11 @@
 2006-12-10  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-secure-entry.c:
+    * libseahorse/seahorse-secure-memory.c: Fix problems with secure entry
+    sometimes corrupting non paged memory blocks. 
+
+2006-12-10  Nate Nielsen  <nielsen@memberwebs.com>
+
     * agent/seahorse-agent.c:
     * data/seahorse.schemas.in:
     * libseahorse/seahorse-prefs-cache.c:
